# Quantum-hackathon

./: .gitignore  PARTICIPANT_GUIDE.md  README.md  SCIENCE.md  pyproject.toml
.claude/: settings.local.json
configs/: iqm.json  local.json  mock.json
problems/: common.py
problems/vrp/: __init__.py  definition.py
problems/vrp/data/: competition_day1.json  small_instance.json
problems/warehouse/: __init__.py  definition.py
qlkit/: __init__.py  config.py
qlkit/backends/: base.py  iqm_cloud.py  local_simulator.py  mock.py
qlkit/core/: metrics.py  problem.py  qubo.py  solution.py
qlkit/orchestration/: circuit_factory.py  dispatcher.py  normalize.py  solver.py  tracker.py
qlkit/repair/: base.py
qlkit/validation/: validator.py
starter_kit/: base_solver.py  mock_backend.py  my_repair.py  my_tuner.py
starter_kit/notebooks/: 01_graph_to_qubo.ipynb  02_simulate_locally.ipynb  03_repair_heuristics.ipynb  04_lambda_outer_loop.ipynb  05_qpu_submission.ipynb
tests/: conftest.py  test_backends.py  test_competition_instances.py  test_dispatcher_tracker.py  test_problem_layer.py  test_qubo.py  test_repair.py  test_solver_end_to_end.py
tools/: calibrate_instance.py  oracle.py
